# AzAudio

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  build.sh
base/: CMakeLists.txt
base/src/AzAudio/: AzAudio.c  AzAudio.h  aza_c_std.c  aza_c_std.h  channel_layout.h  cpuid.c  cpuid.h  dsp.c  dsp.h  easing.c  easing.h  error.h  fft.c  fft.h  header_utils.h  helpers.c  helpers.h  math.c  math.h  memory_debugger.c  memory_debugger.h  mixer.c  mixer.h  mixer_gui.c  simd.h  timer.h  utility.c  utility.h  version.c
base/src/AzAudio/backend/: backtrace.h  interface.h  threads.h
base/src/AzAudio/backend/Linux/: backtrace.c  pipewire.c  threads.c  timer.c
base/src/AzAudio/backend/Win32/: backtrace.c  threads.c  timer.c  wasapi.c
base/src/AzAudio/dsp/: azaBuffer.c  azaBuffer.h  azaChannelMatrix.c  azaChannelMatrix.h  azaDSP.c  azaDSP.h  azaKernel.c  azaKernel.h  azaMeters.c  azaMeters.h  azaSampleDelay.c  azaSampleDelay.h  dsp.h  utility.c  utility.h
base/src/AzAudio/dsp/plugins/: azaCompressor.c  azaCompressor.h  azaCubicLimiter.c  azaCubicLimiter.h  azaDSPDebugger.c  azaDSPDebugger.h  azaDSPMultiplexer.c  azaDSPMultiplexer.h  azaDelay.c  azaDelay.h  azaDelayDynamic.c  azaDelayDynamic.h  azaFilter.c  azaFilter.h  azaGate.c  azaGate.h  azaLookaheadLimiter.c  azaLookaheadLimiter.h  azaLowPassFIR.c  azaLowPassFIR.h  azaMonitorSpectrum.c  azaMonitorSpectrum.h  azaRMS.c  azaRMS.h  azaReverb.c  azaReverb.h  azaSampler.c  azaSampler.h  azaSpatialize.c  azaSpatialize.h
base/src/AzAudio/gui/: gui.c  gui.h  platform-raylib.c  platform.h  prefixes.txt  suffixes.txt  types.c  types.h
base/src/AzAudio/specialized/: azaBufferDeinterlace.c  azaBufferMixMatrix.c  azaBufferReinterlace.c  azaKernel.c
tests/: CMakeLists.txt
tests/limiter/src/: main.c
tests/mic_test/src/: main.cpp
tests/mixer/src/: main.c
tests/profiling/: CMakeLists.txt
tests/profiling/src/: main.c
tests/spatialize/src/: main.c
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/src/: main.c  testing.c  testing.h  vt_strings.h
tests/unit_tests/src/tests/: azaBufferResize.c  azaSampleDelay.c
tools/: CMakeLists.txt  newHeader.c
tools/src/: newHeader.c  statelessParser.c
